404 page change plus some more

--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -60,7 +60,7 @@
 	</div>
 	<!-- js -->
 	<script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
-	<script src="{{ app.request.baseUrl }}/vendor/jquery.lazyload/jquery.lazyload.min.js" type="text/javascript"></script>
+	<script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.mobile.custom.min.js"></script>
 	<script src="{{ app.request.baseUrl }}/ui/js/app.js" type="text/javascript"></script>
 </body>
