--- a/src/ui/404.html
+++ b/src/ui/404.html
@@ -11,7 +11,11 @@
 	<div class="container text-center">
 		<div id="loginform">
 			<h1>404</h1>
+			It is not what you looking for!
 		</div>
+		<a href="https://github.com/sookoll/picu">
+			<img src="{{ app.request.baseUrl }}/ui/img/GitHub-Mark-32px.png" />
+		</a>
 	</div>
 </body>
 </html>
