--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 	<title>{{ set.title }}</title>
+    <meta property="og:title" content="{{ set.title }}" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="utf-8">
+    <meta property="og:url" content="{{ app.request.uri }}" />
+    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_q.jpg" />
+    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_q.jpg" />
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
