--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -9,12 +9,16 @@
 </head>
 <body id="admin">
 	<header>
-		<div class="col-md-6">
+		<div class="col-xs-6">
 			<h1>Picu haldur</h1>
 		</div>
-		<div class="col-md-6 text-right">
-			<div class="btn-group">
-				<a href="{{ app.request.baseUrl }}/clear-cache" class="clear-cache btn btn-warning"><i class="glyphicon glyphicon-cog"></i></a>
+		<div class="col-xs-6 text-right">
+            <span>{{ user.username }}</span>
+            <div class="btn-group">
+				<a href="{{ app.request.baseUrl }}/clear-cache" class="clear-cache btn btn-success"><i class="glyphicon glyphicon-trash"></i></a>
+                <a href="{{ app.request.baseUrl }}/clear-cache/all" class="clear-cache btn btn-warning"><i class="glyphicon glyphicon-trash"></i></a>
+			</div>
+            <div class="btn-group">
 				<a href="{{ app.request.baseUrl }}/logout" class="btn btn-danger"><i class="glyphicon glyphicon-off"></i></a>
 			</div>
 		</div>
@@ -25,10 +29,18 @@
 			<ul>
 				{% for set in sets %}
 				<li>
-					<a href="{{ app.request.baseUrl }}/a/{{ set.id }}/" target="_blank">
-						<img src="https://farm{{ set.farm }}.staticflickr.com/{{ set.server }}/{{ set.primary }}_{{ set.secret }}_q.jpg" title="{{ set.title._content }}" />
-						<h3>{{ set.title._content }} ({{ set.photos }})</h3>
-					</a>
+                    <div class="pull-left">
+                        <img src="https://farm{{ set.farm }}.staticflickr.com/{{ set.server }}/{{ set.primary }}_{{ set.secret }}_q.jpg" title="{{ set.title._content }}" />
+                    </div>
+                    <div class="pull-left">
+                        <h3>{{ set.title._content }}</h3>
+                        <div class="tools">
+                            <a href="{{ app.request.baseUrl }}/a/{{ set.id }}/" target="_blank"><i class="glyphicon glyphicon-new-window"></i></a>
+                            <a href="{{ app.request.baseUrl }}/clear-cache/{{ set.id }}" class="clear-cache text-danger"><i class="glyphicon glyphicon-trash"></i></a>
+                            <span>{{ set.photos }}</span>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
 				</li>
 				{% endfor %}
 			</ul>
