Replaced jq.mobile swipe events to jquery.pip draggable plugin

--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -44,7 +44,7 @@
 	<!-- viewbox -->
 	<div id="viewbox">
 		<div class="img-container">
-			
+			<div></div>
 		</div>
 		<div class="tools row">
 			<div class="col-xs-4 title">
@@ -64,8 +64,8 @@
 	</div>
 	<!-- js -->
 	<script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.pep.js" type="text/javascript"></script>
 	<script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.mobile.custom.min.js"></script>
 	<script src="{{ app.request.baseUrl }}/ui/js/app.js" type="text/javascript"></script>
 </body>
 </html>
