Added picture counter to picture view

--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -52,6 +52,7 @@
 			</div>
 			<div class="col-xs-4 text-center">
 				<a href="#" class="prev" title="Eelmine"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                <a href="#" class="vb-close counter" title="Välju (ESC)"></a>
 				<a href="#" class="next" title="Järgmine"><i class="glyphicon glyphicon-chevron-right"></i></a>
 			</div>
 			<div class="col-xs-4 text-right">
