--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -33,6 +33,7 @@
                                  data-vb-h="{{ photo.height_vb }}" />
                         </a>
                         <div class="tools hidden">
+                            <a href="{{ app.request.baseUrl }}/p/{{ set.id }}/{{ photo.id }}" class="link" title="Otseviide"><i class="glyphicon glyphicon-link"></i></a>
                             <a href="{{ app.request.baseUrl }}/d/{{ set.id }}/{{ photo.id }}" class="download" title="Lae alla"><i class="glyphicon glyphicon-save"></i></a>
                             <!--<a href="{{ app.request.baseUrl }}/a/{{ set.id }}/{{ photo.id }}/fs" class="full" title="Vaata täisekraanil"><i class="glyphicon glyphicon-resize-full"></i></a>-->
                         </div>
@@ -49,7 +50,7 @@
         </div>
         <div class="tools row">
             <div class="col-xs-4 title">
-                <a href="#"><i class="glyphicon glyphicon-picture"></i><span></span></a>
+                <a href="#" class="" title="Otseviide"><i class="glyphicon glyphicon-picture"></i><span></span></a>
             </div>
             <div class="col-xs-4 text-center">
                 <a href="#" class="prev" title="Eelmine"><i class="glyphicon glyphicon-chevron-left"></i></a>
@@ -68,6 +69,6 @@
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.pep.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
-    <script src="{{ app.request.baseUrl }}/ui/js/app.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/ui/js/set.js" type="text/javascript"></script>
 </body>
 </html>
