--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -17,11 +17,17 @@
         <div class="col-xs-6 text-right">
             <span>{{ user.username }}</span>
             <div class="btn-group">
-                <a href="{{ app.request.baseUrl }}/clear-cache" class="clear-cache gallery btn btn-success"><i class="glyphicon glyphicon-trash"></i></a>
-                <a href="{{ app.request.baseUrl }}/clear-cache/all" class="clear-cache btn btn-warning"><i class="glyphicon glyphicon-trash"></i></a>
+                <a href="{{ app.request.baseUrl }}/clear-cache" class="clear-cache gallery btn btn-success" title="Tühjenda galerii puhver">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
+                <a href="{{ app.request.baseUrl }}/clear-cache/all" class="clear-cache btn btn-warning" title="Tühjenda kogu puhver">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
             </div>
             <div class="btn-group">
-                <a href="{{ app.request.baseUrl }}/logout" class="btn btn-danger"><i class="glyphicon glyphicon-off"></i></a>
+                <a href="{{ app.request.baseUrl }}/logout" class="btn btn-danger">
+                    <i class="glyphicon glyphicon-off"></i>
+                </a>
             </div>
         </div>
         <div class="clearfix"></div>
@@ -42,11 +48,11 @@
                             <a href="{{ app.request.baseUrl }}/a/{{ set.id }}/" target="_blank">
                                 <i class="glyphicon glyphicon-new-window"></i>
                             </a>
-                            <a href="{{ app.request.baseUrl }}/upload/{{ set.id }}" class="fileupload fileinput-button">
+                            <a href="{{ app.request.baseUrl }}/upload/{{ set.id }}" class="fileupload fileinput-button" title="Lae pilte juurde">
                                 <i class="glyphicon glyphicon-open"></i>
                                 <input type="file" name="files[]" accept="image/*" multiple />
                             </a>
-                            <a href="{{ app.request.baseUrl }}/clear-cache/{{ set.id }}" class="clear-cache text-danger">
+                            <a href="{{ app.request.baseUrl }}/clear-cache/{{ set.id }}" class="clear-cache text-danger" title="Tühjenda albumi puhver">
                                 <i class="glyphicon glyphicon-trash"></i>
                             </a>
                             <span>{{ set.photos }}</span>
