--- a/src/ui/photo.html
+++ b/src/ui/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" id="photo">
 <head>
     <title>{{ photo.title }}</title>
     <meta property="og:title" content="{{ photo.title }}" />
@@ -12,7 +12,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
-<body id="photo">
+<body>
     <!-- viewbox -->
     <div id="viewbox">
         <div class="img-container" >
