--- a/src/ui/photo.html
+++ b/src/ui/photo.html
@@ -7,8 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="{{ app.request.uri }}" />
-    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_q.jpg" />
-    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_q.jpg" />
+    <meta property="og:image:width" content="{{ set.thumbnail.width_c }}" />
+    <meta property="og:image:height" content="{{ set.thumbnail.height_c }}" />
+    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
+    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
