--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -7,22 +7,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="{{ app.request.uri }}" />
-    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_b.jpg" />
-    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_b.jpg" />
+    <meta property="og:image:width" content="{{ set.thumbnail.width_c }}" />
+    <meta property="og:image:height" content="{{ set.thumbnail.height_c }}" />
+    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
+    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/vendor/justifiedGallery.min/justifiedGallery.min.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
 <body>
-    <header style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_b.jpg)">
+    <header style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg)">
         <h1 class="text-center">{{ set.title }}</h1>
     </header>
     <section>
         <div class="thumbs">
             {% for photo in set.photo %}
             <a data-id="{{ photo.id }}" class="viewbox" href="{{ app.request.baseUrl }}/a/{{ set.id }}/{{ photo.id }}">
-                <img alt="{{ photo.title }}"
-                    class="lazy"
+                <img class="lazy"
                     data-original="{{ photo.url_z }}"
                     data-vb-src="{{ photo.url_vb }}"
                     data-vb-w="{{ photo.width_vb }}"
@@ -30,8 +31,16 @@
                     data-img-link="{{ app.request.baseUrl }}/p/{{ set.id }}/{{ photo.id }}"
                     data-img-download="{{ app.request.baseUrl }}/d/{{ set.id }}/{{ photo.id }}"
                     data-img-full="{{ app.request.baseUrl }}/a/{{ set.id }}/{{ photo.id }}/fs"
-                    src="http://placehold.it/{{ photo.th_w }}x{{ photo.th_h}}"
+                    width="{{ photo.th_w }}"
+                    height:"{{ photo.th_h }}"
+                    src="http://placehold.it/{{ photo.th_w }}x{{ photo.th_h}}/111111/111111"
                 />
+                <div class="caption hidden">
+                    {{ photo.title }}
+                    <!--<a href="{{ app.request.baseUrl }}/p/{{ set.id }}/{{ photo.id }}" class="link" title="Otseviide"><i class="glyphicon glyphicon-link"></i></a>
+                    <a href="{{ app.request.baseUrl }}/d/{{ set.id }}/{{ photo.id }}" class="download" title="Lae alla"><i class="glyphicon glyphicon-save"></i></a>
+                    <a href="{{ app.request.baseUrl }}/a/{{ set.id }}/{{ photo.id }}/fs" class="full" title="Vaata täisekraanil"><i class="glyphicon glyphicon-resize-full"></i></a>-->
+                </div>
             </a>
             {% endfor %}
         </div>
@@ -60,7 +69,7 @@
     </div>
     <!-- js -->
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.pep.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/vendor/jquery/touchswipe.js"></script>
     <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/vendor/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/ui/js/set.js" type="text/javascript"></script>
