--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -63,6 +63,7 @@
                                 <i class="glyphicon glyphicon-trash"></i>
                             </a>
                             <span>{{ set.photos }}</span>
+                            <span>FLICKR</span>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -90,6 +91,7 @@
                                 <i class="glyphicon glyphicon-trash"></i>
                             </a>
                             <span>{{ set.mediaItemsCount }}</span>
+                            <span>GOOGLE PHOTOS</span>
                         </div>
                     </div>
                     <div class="clearfix"></div>
