--- a/src/ui/set.html
+++ b/src/ui/set.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
     <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/vendor/justifiedGallery.min/justifiedGallery.min.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/lib/justifiedGallery.min/justifiedGallery.min.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
 <body>
@@ -70,10 +70,10 @@
         </div>
     </div>
     <!-- js -->
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/touchswipe.js"></script>
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
-    <script src="{{ app.request.baseUrl }}/vendor/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/lib/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/lib/jquery/touchswipe.js"></script>
+    <script src="{{ app.request.baseUrl }}/lib/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/lib/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/ui/js/set.js" type="text/javascript"></script>
 </body>
 </html>
