--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -90,7 +90,7 @@
                             <a href="{{ app.request.baseUrl }}/clear-cache/{{ set.id }}" class="clear-cache text-danger" title="Tühjenda albumi puhver">
                                 <i class="glyphicon glyphicon-trash"></i>
                             </a>
-                            <span>{{ set.mediaItemsCount }}</span>
+                            <span>{{ set.total }}</span>
                             <span>GOOGLE PHOTOS</span>
                         </div>
                     </div>
