--- a/src/ui/photo.html
+++ b/src/ui/photo.html
@@ -9,8 +9,8 @@
     <meta property="og:url" content="{{ app.request.uri }}" />
     <meta property="og:image:width" content="{{ set.thumbnail.width_c }}" />
     <meta property="og:image:height" content="{{ set.thumbnail.height_c }}" />
-    <meta property="og:image" content="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
-    <link rel="image_src" href="https://farm{{ set.thumbnail.farm }}.staticflickr.com/{{ set.thumbnail.server }}/{{ set.thumbnail.id }}_{{ set.thumbnail.secret }}_c.jpg" />
+    <meta property="og:image" content="{{ set.thumbnail.url_c }}" />
+    <link rel="image_src" href="{{ set.thumbnail.url_c }}" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ app.request.baseUrl }}/ui/css/style.css" media="screen" />
 </head>
@@ -28,7 +28,7 @@
                 <a href="#"><i class="glyphicon glyphicon-picture"></i><span>{{ photo.title }}</span></a>
             </div>
             <div class="col-xs-6 text-right">
-                <a href="{{ app.request.baseUrl }}/d/{{ set_id }}/{{ photo.id }}" class="download" title="Lae alla"><i class="glyphicon glyphicon-save"></i></a>
+                <a href="{{ app.request.baseUrl }}/d/{{ set.id }}/{{ photo.id }}" class="download" title="Lae alla"><i class="glyphicon glyphicon-save"></i></a>
             </div>
         </div>
     </div>
@@ -40,7 +40,7 @@
         data-vb-w="{{ photo.width_vb }}"
         data-vb-h="{{ photo.height_vb }}" />
     <!-- js -->
-    <script src="{{ app.request.baseUrl }}/vendor/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="{{ app.request.baseUrl }}/lib/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="{{ app.request.baseUrl }}/ui/js/photo.js" type="text/javascript"></script>
 </body>
 </html>
