--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -18,8 +18,8 @@
             <span>{{ user.username }}</span>
             {% if google %}
             <div class="btn-group">
-                <a href="{{ app.request.baseUrl }}/admin/googleToken" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-log-in"></i>
+                <a href="{{ app.request.baseUrl }}/admin/googleToken" class="btn btn-primary" title="Google autentimine">
+                    <i class="glyphicon glyphicon-log-in"> Google</i>
                 </a>
             </div>
             {% endif %}
